// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleRating renders bottom variant correctly 1`] = `
<StyledContainerBottom>
  <Memo(StarRating)
    clickHandlers={
      Array [
        [Function],
        [Function],
        [Function],
        [Function],
        [Function],
      ]
    }
  />
</StyledContainerBottom>
`;

exports[`ArticleRating renders top variant correctly 1`] = `
<StyledContainerTop>
  <Memo(StarRating)
    clickHandlers={
      Array [
        [Function],
        [Function],
        [Function],
        [Function],
        [Function],
      ]
    }
  />
</StyledContainerTop>
`;
